# InfiniTime_Zephyr_Migration

./: README.md
zephyr-workspace/app/: CMakeLists.txt  prj.conf
zephyr-workspace/app/boards/pine64/PineTime_SmartWatch/: Kconfig.PineTime_SmartWatch  Kconfig.defconfig  PineTime_SmartWatch-pinctrl.dtsi  PineTime_SmartWatch.dts  PineTime_SmartWatch.yaml  PineTime_SmartWatch_defconfig  board.yml
zephyr-workspace/app/src/: benchmark.c  main.cpp  main.h  main_testing.cpp  sdk_config.h
zephyr-workspace/app/src/apps/: Apps.h  CMakeLists.txt  Makefile
zephyr-workspace/app/src/components/alarm/: AlarmController.h
zephyr-workspace/app/src/components/battery/: BatteryController.cpp  BatteryController.h
zephyr-workspace/app/src/components/datetime/: DateTimeController.cpp  DateTimeController.h
zephyr-workspace/app/src/components/fs/: FS.cpp
zephyr-workspace/app/src/components/settings/: Settings.h
zephyr-workspace/app/src/components/timer/: Timer.h
zephyr-workspace/app/src/displayapp/: Controllers.h  DisplayApp.cpp  DisplayApp.h  InfiniTimeTheme.h  LittleVgl.cpp  LittleVgl.h  UserApps.h
zephyr-workspace/app/src/displayapp/apps/: Apps.h.in  cmake_install.cmake
zephyr-workspace/app/src/displayapp/fonts/: Makefile  cmake_install.cmake  fontawesome_weathericons.c  jetbrains_mono_42.c  (+5 more)
zephyr-workspace/app/src/drivers/: Spi.cpp  SpiMaster.cpp  SpiMaster.h  SpiNorFlash.cpp  St7789.cpp  St7789.h  TwiMaster.cpp  TwiMaster.h
zephyr-workspace/app/src/littlefs/: lfs.c
zephyr-workspace/app/src/systemtask/: SystemMonitor.h  SystemTask.cpp  SystemTask.h
(+14 files in other folders)
